Fixed bad header, added button with image

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-tml lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,6 +28,7 @@ tml lang="en">
         .module button {
             width: 100%;
             padding: 10px;
+            background-image: url('images/button_background.png');
             background-color: #333;
             color: white;
             border: none;
