--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             border-radius: 5px;
             text-align: left;
             font-size: 16px;
-	    font-weight:"bold";
+	    font-weight: bold;
             cursor: pointer;
         }
         .module button:hover {
