change background of list of content

--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
                         <img src="images/jj_linkedin_profile.jpg" alt="Profile Imagen" class="profile-image">
                         <div class="text">
                             <span class="name">Joaquín Bogado</span><br>
-                            <span class="description">Dr. en Cs. Informáticas<br>Experto en IA</span>
+                            <span class="description">Dr. en Ciencias Informáticas<br>Experto en IA</span>
                         </div>
                     </div>
                 </div>
@@ -31,9 +31,8 @@
         <h2>Contenidos del Curso</h2>
         <div class="module-container">
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 1</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> Autograd <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Autograd <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Te explicamos qué es y te mostramos cómo implementar un motor de cálculo de gradientes automático (MichiGrad) para entrenar redes neuronales en Python pelado (unas 200 líneas, con comentarios).</p>
                         <p>Te explicamos qué es y cómo hacer Backpropagation a mano, y cómo automatizarlo. Refrescaremos algunos conceptos matemáticos básicos como los de función diferenciable, derivadas parciales y regla de la cadena.</p>
@@ -43,9 +42,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 2</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> MyNN <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> MyNN <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Te guiamos para que implementes tu propia librería de Redes Neuronales (Neural Networks o NN) desde una simple neurona (Perceptron), pasando por una capa de neuronas (Layer) y finalmente varias capas de neuronas (Multi Layer Perceptron o MLP).</p> 
                         <p>Además introducimos a las funciones de activación, en particular a la tangente hiperbólica (tanh) y la unidad lineal regularizada (Regularized Linear Unit o ReLU), entre otras.</p>
@@ -54,9 +52,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 3</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> Makemore y bi-gramas <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Makemore y bi-gramas <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Te explicamos qué es un modelo auto-regresivo estadístico de bi-gramas y te enseñamos a implementar uno.</p> 
                         <p>Estos modelos se asemejan mucho a los GPTs en cuanto a su forma de generar texto.</p>
@@ -68,9 +65,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 4</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> Más makemore y MLPs <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Más makemore y MLPs <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Nos ponemos más serios respecto a los modelos de lenguajes e implementamos el modelo del paper "A Neural Probabilistic Language Model" de Bengio et al pero a nivel de caracteres en lugar de palabras.</p> 
                         <p>Introducimos el concepto de Embeddings y nos adentramos más en las funcionalidades que ofrece PyTorch para trabajar con modelos de redes neuronales.</p>
@@ -81,9 +77,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 5</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> Todavía más makemore (ResNet50) <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Todavía más makemore (ResNet50) <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Introducimos el problema de la desaparición y la explosión de los gradientes en redes neuronales con multiples capas y su solución mediante técnicas especiales de inicialización de las matrices de peso (Kaiming Init) y más en general, mediante la implementación de normalización por lotes (Batch Normalization). 
                         <p>Veremos en detalle cómo visualizar y detectar este problema mediante gráficos de saturación de neuronas.</p>
@@ -93,9 +88,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 6</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> Promesa que es lo último de makemore (WaveNet) <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Promesa que es lo último de makemore (WaveNet) <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Implementamos WaveNet desde cero para descubrir el poder de las convoluciones.</p>
                         <p>Estas operaciones nos permiten transformar las entradas del modelo de manera eficiente, algo crucial para poder entrenar modelos más grandes en tiempos razonables.</p>
@@ -105,9 +99,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 7</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> Implementando ChatGPT desde cero <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Implementando ChatGPT desde cero <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Te explicamos qué es el Mecanismo de Atención y sus variantes (cross attention, self attention, multi-head attetion) y cómo se usa en los Transformers (encoders y decoders), la arquitectura en el corazón de ChatGPT y otros sistemas de Inteligencia Artificial Generativa.</p>
                         <p>Introducimos formalmente el concepto de token. Combinamos todo y entrenamos nuestro primer GPT (Generative Pre-trained Transformer). </p> 
@@ -118,9 +111,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 8</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> El tokenizer de ChatGPT <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> El tokenizer de ChatGPT <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Te mostramos qué es, cómo funciona y cómo se implementa un Byte Pair Encoder (BPE), el generador de Tokens de ChatGPT-2.</p>
                         <p>Cómo y por qué es necesario entrenarlo, cuál es el impacto del tokenizador en el rendimiento del lenguaje. </p>
@@ -134,9 +126,8 @@
                 </div>
             </div>
             <div class="module">
-                <button class="button-module" style="background-image: url('images/button_background.png');">Módulo 9</button>
                 <div class="info-modulo">
-                    <div class="module-name" onclick="toggleModulo(this)"> Sorpresa! <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Sorpresa! <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Sorpresa.</p>
                         
