Título de Joaquin

--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
                         <img src="images/jj_linkedin_profile.jpg" alt="Profile Imagen" class="profile-image">
                         <div class="text">
                             <span class="name">Joaquín Bogado</span><br>
-                            <span class="description">Dr. en Ciencias Informáticas<br>Experto en IA</span>
+                            <span class="description">Doctor en Ciencias Informáticas<br>Experto en IA Generativa</span>
                         </div>
                     </div>
                 </div>
