--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,6 @@
     <div class="container-g">
         <div class="container">
             <div class="title">
-                <span class="text">Cursos:</span><br>
                 <h1>Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto</h1>
                 
                 <div class="info-rrss"> 
@@ -148,6 +147,7 @@
                         <img src="images/logo_discord_n.png" alt="Discord" class="social-media-logo">
                     </a>
                 </div>
+                <div>Nuestra página web es una porquería, nuestro curso no. Si haces diseño web y tenes una idea de como mejorar nuestra página, contactanos. Estamos contratando.</div>
             </div>
         </div>
     </footer>
