--- a/index1.html
+++ b/index1.html
@@ -147,11 +147,12 @@
                         <img src="images/logo_discord_n.png" alt="Discord" class="social-media-logo">
                     </a>
                 </div>
-            <p>
-                <div>Nuestra página web es una porquería, nuestro curso no. Si haces diseño web y tenes una idea de como mejorar nuestra página, contactanos. Estamos contratando.</div>
-            </p>
+
             </div>
         </div>
+    </footer>
+    <footer>
+        <div>Nuestra página web es una porquería, nuestro curso no. Si haces diseño web y tenes una idea de como mejorar nuestra página, contactanos. Estamos contratando.</div>
     </footer>
     
     <script>
