--- a/index1.html
+++ b/index1.html
@@ -135,15 +135,26 @@
             </div>
         </div>
     </div>
+    <div class="curse-description">
+        <p>
+            Cada módulo estará acompañado por una serie de ejercicios para ir fijando los conocimientos. Además de los Jupyter Notebooks con código para probar todo lo implementado en el curso, ofrecemos la posibilidad de hacer 3 encuentros sincrónicos (por videoconferencia) al finalizar los módulos 3, 7 y 9 para que puedas hacerles consultas a nuestros profes. Los cupos serán limitados, pero si querés ingresar a la lista de espera contestá las preguntas y enviá el formulario cuanto antes.
+        </p>
+        <p>
+            Los requisitos mínimos para el curso son conocimientos de programación, algorítmica básica (con que entiendas la diferencia entre un for y un while y entre una clase, un objeto y una función, alcanza), Python (si usas environments tipo venv o conda, genial!) por que aprender sobre la marcha va a hacerte todo cuesta arriba, nociones de cálculo y análisis matemático de primer año de la universidad o del último año de la escuela técnica (funciones, derivadas, matrices, sistemas de coordenadas) y algunas nociones de  probabilidades y estadística (distribuciones de probabilidad, probabilidad de un evento). Podrás tomar un autotest nivelatorio para que puedas identificar aquellas áreas que pueden presentarte problemas y probablemente necesites reforzar para sacarle más partido al curso.
+        </p>
+        <p>
+            Podés rellenar <a href=https://forms.gle/g5ZneDZrkAFgbWu66>este formulario</a> para recibir más noticias y enterarte de la inscripción y el comienzo del curso.
+        </p>
+       
+    </div>
 
     <footer>
         <div class="footer-content">
-            
                 <div class="social-media">
                     <a href="https://www.linkedin.com/company/purrfect-ai" target="_blank">
                         <img src="images/logo_linkedin_n.png" alt="LinkedIn" class="social-media-logo">
                     </a>
-                    <a href="https://discord.gg/tuinvitacion" target="_blank">
+                    <a href="https://discord.gg/YQTX6bghEa" target="_blank">
                         <img src="images/logo_discord_n.png" alt="Discord" class="social-media-logo">
                     </a>
                 </div>
