--- a/index1.html
+++ b/index1.html
@@ -136,14 +136,20 @@
         </div>
     </div>
     <div class="curse-description">
+        <h2>Modalidad del curso</h2>
         <p>
-            Cada módulo estará acompañado por una serie de ejercicios para ir fijando los conocimientos. Además de los Jupyter Notebooks con código para probar todo lo implementado en el curso, ofrecemos la posibilidad de hacer 3 encuentros sincrónicos (por videoconferencia) al finalizar los módulos 3, 7 y 9 para que puedas hacerles consultas a nuestros profes. Los cupos serán limitados, pero si querés ingresar a la lista de espera contestá las preguntas y enviá el formulario cuanto antes.
+            El curso consta de varios módulos, los cuales se desarrollan en clases grabadas en video, donde se implementa en código cada concepto explicado. Es una buena idea ir pausando los videos, copiando el código y haciendo las pruebas que creas necesarias hasta que entiendas lo que está pasando en profundidad.
         </p>
         <p>
-            Los requisitos mínimos para el curso son conocimientos de programación, algorítmica básica (con que entiendas la diferencia entre un for y un while y entre una clase, un objeto y una función, alcanza), Python (si usas environments tipo venv o conda, genial!) por que aprender sobre la marcha va a hacerte todo cuesta arriba, nociones de cálculo y análisis matemático de primer año de la universidad o del último año de la escuela técnica (funciones, derivadas, matrices, sistemas de coordenadas) y algunas nociones de  probabilidades y estadística (distribuciones de probabilidad, probabilidad de un evento). Podrás tomar un autotest nivelatorio para que puedas identificar aquellas áreas que pueden presentarte problemas y probablemente necesites reforzar para sacarle más partido al curso.
+            Cada módulo estará acompañado por una serie de ejercicios para ir fijando los conocimientos. En general consisten en extender alguna parte del código o explorar alguna parte que queda fuera de las explicaciones.
+            
+            Además de los Jupyter Notebooks con código para probar todo lo implementado en el curso, ofrecemos la posibilidad de hacer 3 encuentros sincrónicos (por videoconferencia) al finalizar los módulos 3, 6 y 9 para que puedas hacerles consultas a nuestros profes.
         </p>
         <p>
-            Podés rellenar <a href=https://forms.gle/g5ZneDZrkAFgbWu66>este formulario</a> para recibir más noticias y enterarte de la inscripción y el comienzo del curso.
+            Los requisitos mínimos para el curso son conocimientos de programación, algorítmica básica (con que entiendas la diferencia entre un for y un while y entre una clase, un objeto y una función, alcanza), Python (si usas environments tipo venv o conda, genial!) por que aprender sobre la marcha va a hacerte todo cuesta arriba, nociones de cálculo y análisis matemático de primer año de la universidad o del último año de la escuela técnica (funciones, derivadas, matrices, sistemas de coordenadas) y algunas nociones de  probabilidades y estadística (distribuciones de probabilidad, probabilidad de un evento). Podés tomar un <a href="https://forms.gle/WB1yTfCtLng9JXur5">autotest nivelatorio</a> para que puedas identificar aquellas áreas que pueden presentarte problemas y probablemente necesites reforzar para sacarle más partido al curso.
+        </p>
+        <p>
+            Podés rellenar <a href="https://forms.gle/g5ZneDZrkAFgbWu66">este formulario</a> para recibir más noticias y enterarte de la inscripción y el comienzo del curso. Los cupos serán limitados, pero si querés ingresar a la lista de espera contestá las preguntas y enviá el formulario cuanto antes.
         </p>
        
     </div>
