--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             Los requisitos mínimos para el curso son conocimientos de programación, algorítmica básica (con que entiendas la diferencia entre un for y un while y entre una clase, un objeto y una función, alcanza), Python (si usas environments tipo venv o conda, genial!) por que aprender sobre la marcha va a hacerte todo cuesta arriba, nociones de cálculo y análisis matemático de primer año de la universidad o del último año de la escuela técnica (funciones, derivadas, matrices, sistemas de coordenadas) y algunas nociones de  probabilidades y estadística (distribuciones de probabilidad, probabilidad de un evento). Podés tomar un <a href="https://forms.gle/WB1yTfCtLng9JXur5">autotest nivelatorio</a> para que puedas identificar aquellas áreas que pueden presentarte problemas y probablemente necesites reforzar para sacarle más partido al curso.
         </p>
         <p>
-            Podés rellenar <a href="https://forms.gle/g5ZneDZrkAFgbWu66">este formulario</a> para recibir más noticias y enterarte de la inscripción y el comienzo del curso. Los cupos serán limitados, pero si querés ingresar a la lista de espera contestá las preguntas y enviá el formulario cuanto antes.
+            Podés rellenar <a href="https://forms.gle/g5ZneDZrkAFgbWu66">este formulario</a> para recibir más noticias y enterarte cuando abramos la inscripción. Los cupos serán limitados, pero si querés ingresar a la lista de espera contestá las preguntas y enviá el formulario cuanto antes.
         </p>
        
     </div>
