add mayra's pics

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
                             <span class="description">Doctor en Ciencias Informáticas<br>Experto en IA Generativa</span>
                         </div>
                     </div>
+                    <div class="personal-info">
+                        <img src="images/may-profile.png" alt="Profile Imagen" class="profile-image">
+                        <div class="text">
+                            <span class="name">Mayra Villarrubia</span><br>
+                            <span class="description">Directora de Purrfect AI<br>Coordinadora de Contenidos</span>
+                        </div>
+                    </div>
                 </div>
                 
             </div>  
