--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
             </div>  
         </div>
     </div>
-
+    <div class="curse-description">
+        <h2>Nuestro curso</h2>
+        <p>
+            Querés convertirte en un experto en LLMs (Large Language Models)? Querés saber cómo funciona ChatGPT? Querés entender cual es la diferencia entre un modelo basado en Llama y uno basado en BERT? Entonces este curso es para vos. En este curso no vamos a explicarte cómo escribir un prompt para ChatGPT. Vamos a enseñarte a programar tu propio ChatGPT, desde cero. 
+        </p>
+        <p>
+            Estamos preparando el material para nuestro curso de Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto en castellano que comenzará a principios de Marzo/2025. Te mostramos todo lo que necesitas saber para entender cómo funciona ChatGPT y otros LLMs y que nadie se animó a enseñarte en español.
+        </p>
+    </div>
     <div class="temario">
         <h2>Contenidos del Curso</h2>
         <div class="module-container">
