--- a/betatestingprogram.html
+++ b/betatestingprogram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<title>Programa de Beta Testers del curso Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto.</title>
+<h1>Programa de Beta Testers del curso Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto.</h1>
 <div class="curse-description">
 <p> 
 Hola. Estás accediendo a nuestro nuevo curso <b>Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto</b>. Como parte del programa de beta testing, contás con importantes descuentos. Este curso está valuado en U$s 450 para su edición lanzamiento. 
