Update betatestingprogram.html minor changes

--- a/betatestingprogram.html
+++ b/betatestingprogram.html
@@ -7,31 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Programa de Beta Testers del curso Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto.</h1>
+
 <div class="curse-description">
-<p> 
-Hola. Estás accediendo a nuestro nuevo curso <b>Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto</b>. Como parte del programa de beta testing, contás con importantes descuentos. Este curso está valuado en U$s 450 para su edición lanzamiento. 
-</p> <p>
-Los beta testers tienen por función ayudar en todo momento a incrementar la calidad de este curso. Los contenidos que desarrollaremos tratan temas complejos y altamente técnicos. Es por ello que intentaremos transmitirlos con la mayor claridad y especificidad posible. Sin embargo, somos humanos y podemos fallar. Es allí cuando necesitaremos de tu ayuda como beta tester, para que puedas indicarnos cuándo lo hacemos. 
-</p> <p>
-Como beta tester, tu trabajo será doble. Por un lado, deberás hacer un esfuerzo para comprender los contenidos del curso en un tema tan apasionante como demandante. Por otro, te pediremos que pongas especial atención a aquellos pasajes de los videos donde te parezca que los contenidos no son suficientemente claros, que las explicaciones no son suficientes o simplemente, cuando el contenido explicado no se entienda del todo.
-</p> <p>
-Respecto a la metodología del curso, recomendamos realizarlo de la siguiente manera: 
-</p> <p>
-Contar con una computadora con dos monitores (sería lo ideal). Con un monitor funciona también, en ese caso tendrías que trabajar a ventanas divididas. En una ventana se pone el video y en la otra, una consola de Jupyter Notebook con el template de la clase abierto. 
-</p> <p>
-A medida que avanza el video, podés ir copiando el código en el notebook y pausando el video para hacer las pruebas que creas pertinentes para entender lo que estás haciendo. Es muy importante que te detengas y hagas las pruebas. Podes hacer más pruebas de las que hace el profe en la pantalla. 
-</p> <p>
-Lo bueno de los notebooks es que puedes volver a ejecutar las celdas anteriores sin problemas, para volver a donde te quedaste en el video. Además, es muy importante que tipees el código personalmente. Copiar y pegar funciona, pero sólo si entendés al 100% qué hace cada línea del código que estás pegando. Por otra parte, escribirlo vos mismo te va a permitir ganar intuición y desarrollar tu propio estilo. Esta forma es la que nos resultó buena a nosotros y no necesariamente es la mejor para vos. Cualquier comentario que tengas como beta tester al respecto será más que bienvenido.
-</p> <p>
-Además de los videos, tenemos muchas áreas para mejorar. De algunas estamos conscientes pero de otras no. 
-</p> <p>
-Es probable que te pidamos que completes formularios o encuestas o te hagamos preguntas directamente por mail o por la plataforma respecto a qué te pareció tal o cual cosa. Esperamos no sólo puedas respondernos, sino que además lo hagas honestamente, incluso si es para realizar alguna crítica. Especialmente si son críticas. Entendemos que el objetivo será poder brindarles un curso de calidad y mejorar su experiencia como alumnxs.
-</p> <p>
-Como beta tester esperamos te comprometas a tener en cuenta estas cuestiones y a colaborar con nosotros para que la segunda iteración del curso justifique su costo.
-</p> <p>
-Saludos cordiales
-El equipo de Purrfect AI.
-</p>
-</div>
+    <h2>Programa de Beta Testers del curso Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto.</h2>
+    <p> 
+    La edición de lanzamineto de nuevo curso <b>Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto</b> cuenta con un programa de betatesting para hacer nuestro curso mucho mejor con el tiempo. Como parte del programa de beta testing, contás con importantes descuentos. Sin embargo solo contamos con algunos cupos para ser betatester y podemos requerite más información si pensamos que podés ser uno.
+    </p> <p>
+    Los beta testers tienen por función ayudar en todo momento a incrementar la calidad de este curso. Los contenidos que desarrollaremos tratan temas complejos y altamente técnicos. Es por ello que intentaremos transmitirlos con la mayor claridad y especificidad posible. Sin embargo, somos humanos y podemos fallar. Es allí cuando necesitaremos de tu ayuda como beta tester, para que puedas indicarnos cuándo lo hacemos. 
+    </p> <p>
+    Como beta tester, tu trabajo será doble. Por un lado, deberás hacer un esfuerzo para comprender los contenidos del curso en un tema tan apasionante como demandante. Por otro, te pediremos que pongas especial atención a aquellos pasajes de los videos donde te parezca que los contenidos no son suficientemente claros, que las explicaciones no son suficientes o simplemente, cuando el contenido explicado no se entienda del todo.
+    </p> <p>
+    Respecto a la metodología del curso, recomendamos realizarlo de la siguiente manera: 
+    </p> <p>
+    Contar con una computadora con dos monitores (sería lo ideal). Con un monitor funciona también, en ese caso tendrías que trabajar a ventanas divididas. En una ventana se pone el video y en la otra, una consola de Jupyter Notebook con el template de la clase abierto. 
+    </p> <p>
+    A medida que avanza el video, podés ir copiando el código en el notebook y pausando el video para hacer las pruebas que creas pertinentes para entender lo que estás haciendo. Es muy importante que te detengas y hagas las pruebas. Podes hacer más pruebas de las que hace el profe en la pantalla. 
+    </p> <p>
+    Lo bueno de los notebooks es que puedes volver a ejecutar las celdas anteriores sin problemas, para volver a donde te quedaste en el video. Además, es muy importante que tipees el código personalmente. Copiar y pegar funciona, pero sólo si entendés al 100% qué hace cada línea del código que estás pegando. Por otra parte, escribirlo vos mismo te va a permitir ganar intuición y desarrollar tu propio estilo. Esta forma es la que nos resultó buena a nosotros y no necesariamente es la mejor para vos. Cualquier comentario que tengas como beta tester al respecto será más que bienvenido.
+    </p> <p>
+    Además de los videos, tenemos muchas áreas para mejorar. De algunas estamos conscientes pero de otras no. 
+    </p> <p>
+    Es probable que te pidamos que completes formularios o encuestas o te hagamos preguntas directamente por mail o por la plataforma respecto a qué te pareció tal o cual cosa. Esperamos no sólo puedas respondernos, sino que además lo hagas honestamente, incluso si es para realizar alguna crítica. Especialmente si son críticas. Entendemos que el objetivo será poder brindarles un curso de calidad y mejorar su experiencia como alumnxs.
+    </p> <p>
+    Como beta tester esperamos te comprometas a tener en cuenta estas cuestiones y a colaborar con nosotros para que la segunda iteración del curso justifique su costo.
+    </p> <p>
+    Saludos cordiales
+    El equipo de Purrfect AI.
+    </p>
+    </div>
 </body>
