Update index.html typo

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </p>-->
     </div>
     <div class="curse-description">
-        <h2>Abierta la inscrición!!</h2>
+        <h2>Abierta la inscripción!!</h2>
         <p>
             Inscribite llenando <a href="https://forms.gle/HWNG5b6bg1ymhRca9">este formulario</a>. Los videos del módulo 1 estarán disponibles a partir del <b>10 de Marzo</b>. 
         </p>
