Update index.html added modulo 0

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         <div class="module-container">
             <div class="module">
                 <div class="info-modulo">
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Módulo 0: El Percerptrón <span class="flecha">▼</span></div>
+                    <div class="module-description">
+                        <p>Te explicamos qué es y te mostramos como se entrena un Perceptrón. La mínima estructura de datos de las redes neuronales modernas</p>
+                        <p>Este módulo insume alrededor de 2,5 horas para ver la clase + otras 1,5 horas para resolver los ejercicios.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="module">
+                <div class="info-modulo">
                     <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Módulo 1: Autograd <span class="flecha">▼</span></div>
                     <div class="module-description">
                         <p>Te explicamos qué es y te mostramos cómo implementar un motor de cálculo de gradientes automático (MichiGrad) para entrenar redes neuronales en Python pelado (unas 200 líneas, con comentarios).</p>
