Update index.html added module 9

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
             </div>
             <div class="module">
                 <div class="info-modulo">
-                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Módulo 9: Sorpresa! <span class="flecha">▼</span></div>
+                    <div class="module-name" style="background-image: url('images/button_background.png');" onclick="toggleModulo(this)"> Módulo 9: Aspectos éticos de los modelos de lenguajes. <span class="flecha">▼</span></div>
                     <div class="module-description">
-                        <p>Sorpresa.</p>
-                        
+                        <p>Te contamos algunos de los aspectos éticos de los modelos de lenguajes y sus limitaciones de los modelos de lenguajes.</p>
+                        <p>Este módulo tendrá una duración de 1 hora y no tiene práctica.</p>
                     </div>
                 </div>
             </div>
