--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <img src="images/may-profile.png" alt="Profile Imagen" class="profile-image">
                         <div class="text">
                             <span class="name">Mayra Villarrubia</span><br>
-                            <span class="description">Directora de Purrfect AI<br>Coordinadora de Contenidos</span>
+                            <span class="description">Directora de Proyectos de Purrfect AI<br>Coordinadora de Contenidos</span>
                         </div>
                     </div>
                 </div>
