--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             Querés convertirte en un experto en Large Language Models (LLMs)? Querés saber cómo funciona ChatGPT? Querés entender cual es la diferencia entre un modelo basado en Llama y uno basado en BERT? Querés saber porqué DeepSeek-V3 es más eificiente que ChatGPT? Entonces este curso es para vos. En este curso no vamos a explicarte cómo escribir un prompt para ChatGPT. Vamos a enseñarte a programar tu propio ChatGPT, desde cero. 
         </p>
         <p>
-            Estamos preparando el material para nuestro curso de Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto en castellano que comenzará a principios de Marzo/2025. Te mostramos todo lo que necesitas saber para entender cómo funciona ChatGPT y otros LLMs y que nadie se animó a enseñarte en español.
+            En nuestro curso de Nociones de Deep Learning para Inteligencia Artificial Generativa de Texto en castellano, te mostramos todo lo que necesitas saber para entender cómo funciona ChatGPT y otros LLMs y que nadie más se animó a enseñarte.
         </p>
     </div>
     <div class="temario">
