--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <div class="curse-description">
         <h2>Abierta la inscripción!!</h2>
         <p>
-            Inscribite llenando <a href="https://forms.gle/HWNG5b6bg1ymhRca9">este formulario</a>. Los videos del módulo 1 estarán disponibles a partir del <b>10 de Marzo</b>. 
+            Inscribite llenando <a href="https://forms.gle/HWNG5b6bg1ymhRca9">este formulario</a>. 
         </p>
        
     </div>
